projects/groot-ag-grid/src/style/_groot-ag-grid.component.scss
$table-header-background-color: $light-primary !default;
$table-header-foreground-color: color-yiq($table-header-background-color) !default;
$table-accordion-bg: $gray-300 !default;


$ag-suppress-legacy-var-import: true;

@import "~ag-grid-community/src/styles/ag-grid";
@import "~ag-grid-community/src/styles/ag-theme-balham/sass/ag-theme-balham-mixin";

.ag-theme-balham {
  @include ag-theme-balham((
    balham-active-color: $primary,
    odd-row-background-color: $white,
    font-family: $font-family-sans-serif,
    font-size: $font-size-base,
    border-color: $table-border-color,
    header-background-color: $table-header-background-color,
    header-foreground-color: $table-header-foreground-color,
    secondary-foreground-color: $table-header-icon-color,
  ));
}

.ag-grid-rows-clickable .ag-row {
  cursor: pointer;
}

.ag-theme-balham .ag-row {
  &.accordion-expanded {
    background-color: $table-accordion-bg;
    border-bottom: 0;
  }

  &.accordion-row {
    background-color: $table-accordion-bg;
    border-top: 0;
  }
}

.groot-paginator-hidden {
  visibility: hidden;
}

//groot-ag-grid {
//  .groot-header-checkbox-cell.ag-header-cell {
//    padding-left: 7px;
//  }
//
//  .groot-checkbox-cell.ag-cell {
//    padding: 0 6px;
//  }
//
//  .ag-theme-balham .ag-selection-checkbox,
//  .ag-theme-balham .ag-checkbox {
//    .ag-input-wrapper {
//      overflow: visible;
//    }
//
//    .ag-icon {
//      font-size: 13px;
//      line-height: 13px;
//      border-radius: 2px;
//      position: relative;
//
//      &:before {
//        visibility: hidden;
//      }
//    }
//
//    .ag-icon-checkbox-unchecked {
//      border: 1px solid $gray-500;
//    }
//
//    .ag-icon-checkbox-indeterminate {
//      border: 1px solid $gray-500;
//
//      &::after {
//        content: "";
//
//        background: 50%/60% 60% no-repeat;
//        background-image: str-replace(url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3e%3cpath fill='#{$gray-500}' d='m 23 10 h -23 v 4 h 23 v -4 z'/%3e%3c/svg%3e"), "#", "%23");
//
//        position: absolute;
//        left: 0;
//        width: 1rem;
//        height: 1rem;
//      }
//    }
//
//    .ag-icon-checkbox-checked {
//      border: 1px solid $primary;
//      color: $white;
//      background-color: $primary;
//
//      &::after {
//        content: "";
//        background: 50%/60% 60% no-repeat;
//        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23FFFFFF' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
//        position: absolute;
//        left: 0;
//        width: 1rem;
//        height: 1rem;
//      }
//    }
//  }
//}

.groot-loading-indicator-spinner.no-left-margin {
  left: auto;
}

groot-ag-grid {
  display: block;
}

